--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -176,7 +176,7 @@
                   $45,90
                 </h3>
                 <h4 class="varvilinemagi_author">
-                  by Joonas Sildre
+                  Autor: Joonas Sildre
                 </h4>
                 <h4 class="varvilinemagi_rating">
                   4.1 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -257,14 +257,14 @@
               <section class="taks_dogi-main_text">
                 <div class="taks_dogi_headings">
                   <h3 class="taks_dogi_first-heading">
-                    Taks & Dogi. Lasteraamat kahest koerast.
+                    Taks ja Dogi. Lasteraamat kahest koerast.
                   </h3>
                   <h3 class="taks_dogi-price">
                     $22.95
                   </h3>
                   <h4 class="taks_dogi_author">
                     Autor: Kadri Hinrikus <br>
-                    Illustrator: Elina Sildre
+                    Illustraator: Elina Sildre
                   </h4>
                   <h4 class="taks_dogi_rating">
                     4.1 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -314,7 +314,7 @@
             <div class="taks_dogi-suvi">
               <div class="taks_dogi-suvi-book_section">
                 <section class="taks_dogi-suvi-book">
-                  <h2 class="taks_dogi-suvi_text">Taks ja Dogi Suvi</h2>
+                  <h2 class="taks_dogi-suvi_text">Taksi ja Dogi Suvi</h2>
                   <img src="images/books/taks_dogi-suvi/taks_dogi-suvi.jpg" alt="" class="taks_dogi-suvi_image">
                   <div class="taks_dogi-suvi_small-pictures">
 
@@ -350,7 +350,7 @@
                 <section class="taks_dogi-suvi-main_text">
                   <div class="taks_dogi-suvi_headings">
                     <h3 class="taks_dogi-suvi_first-heading">
-                      Taks & Dogi Suvi. Järg raamtatust "Taks ja Dogi".
+                      Taksi ja Dogi Suvi. Järg raamatust "Taks ja Dogi".
                     </h3>
                     <h3 class="taks_dogi-suvi-price">
                       $22.95
@@ -542,7 +542,7 @@
                     <section class="maailmanaba-main_text">
                       <div class="maailmanaba_headings">
                         <h3 class="maailmanaba_first-heading">
-                          Maailmanaba: Lasteraamat sügavast august millel on võimed.
+                          Maailma naba: Lasteraamat sügavast august millel on võimed.
                         </h3>
                         <h3 class="maailmanaba-price">
                           $10,00
