--- a/Pood/home.html
+++ b/Pood/home.html
@@ -27,8 +27,8 @@
         <div class="switch">
           <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
           <label for="language-toggle"></label>
-          <span class="on">GB</span>
-          <span class="off">EE</span>
+          <span class="on">ENG</span>
+          <span class="off">EST</span>
         </div>
         
         <!-- <button class="home_button">  
