--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -75,7 +75,7 @@
                 Kahe heli vahel: Arvo Pärdi teekond tema muusikakeelde.
               </h3>
               <h3 class="arvopart-price">
-                $25,00
+                €25,00
               </h3>
               <h4 class="arvopart_author">
                 Autor: Joonas Sildre
@@ -94,9 +94,7 @@
             </div>
             <div class="arvopart-mid_text">
               <h4 class="arvopart-mid_text_text">
-                Joonas Sildre maalib aastatepikkusele uurimistööle ja tihedale koostööle Arvo Pärdi endaga an
-                atmosfääriline portree rahutust kunstnikust, kes ei kohku tagasi astumast riigi või oma kontrolli alla
-                oma sisemised vastuolud. <br> <br>
+              Aastatepikkuse uurimistöö ja tiheda koostöö põhjal Arvo Pärdiga enesega joonistab Joonas Sildre meeleoluka portree rahutust kunstnikust, kes ei pelga astuda vastu riigi kontrollile või omaenda sisemistele vastuoludele. <br> <br>
 
                 Arvo Pärt tungis 1960. aastatel Nõukogude okupatsiooni all olevas Eestis muusikamaailma kui uljas noor
                 mees, kes nihutas avangardse modernismi piire. Seejärel jäi ta vaikima, olles kaotanud võime väljendada
@@ -173,7 +171,7 @@
                   Värviline Mägi. A graphic novel about Konrad Mägi
                 </h3>
                 <h3 class="varvilinemagi-price">
-                  $45,90
+                  €45,90
                 </h3>
                 <h4 class="varvilinemagi_author">
                   Autor: Joonas Sildre
@@ -183,19 +181,19 @@
                     class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
                 </h4>
                 <h4 class="varvilinemagi_introducing">
-                  Joonas Sildre tegeleb Konrad Mäega tema enda sisemiste pingete ja otsingute võrgustikus,
-                  rahvusvaheline kontekst ja olukord Eestis 20. sajandi esimesel poolel. "Mul on
-                  alati huvitanud, mis on kunstniku edasiviiv jõud," räägib Sildre.
+                  Joonas Sildre mahukas graafiline romaan võtab pildiliselt kokku olulisemad pöördepunktid Konrad Mägi
+                  (1878–1925) elus ja loomingus, rõhutades eriti värvi tähtsust Mägi kunstis.
                 </h4>
 
               </div>
               <div class="varvilinemagi-mid_text">
                 <h4 class="varvilinemagi-mid_text_text">
-                  Joonas Sildre mahukas graafiline romaan võtab pildiliselt kokku olulisemad pöördepunktid Konrad Mägi
-                  (1878–1925) elus ja loomingus, rõhutades eriti värvi tähtsust Mägi kunstis.
+                  Joonas Sildre tegeleb Konrad Mäega tema enda sisemiste pingete ja otsingute võrgustikus,
+                  rahvusvaheline kontekst ja olukord Eestis 20. sajandi esimesel poolel. "Mul on
+                  alati huvitanud, mis on kunstniku edasiviiv jõud," räägib Sildre.
                   „Konrad Mägi tundus keeruka kunstnikuteekonna musternäidis, lausa
                   arhetüüp, kelle elukaart vaadata. Teadsin aga, et Konrad Mägi nimelise mõistatuse lahendamiseks pean
-                  ka uurima ja näitama valgust pealispinna all asuvatele sügavamatele värvikihtidele.“ -Joonas Sildre
+                  ka uurima ja näitama valgust pealispinna all asuvatele sügavamatele värvikihtidele.“ (Joonas Sildre)
                 </h4>
               </div>
               <div class="varvilinemagi-buy_section">
@@ -260,7 +258,7 @@
                     Taks ja Dogi. Lasteraamat kahest koerast.
                   </h3>
                   <h3 class="taks_dogi-price">
-                    $22.95
+                    €22.95
                   </h3>
                   <h4 class="taks_dogi_author">
                     Autor: Kadri Hinrikus <br>
@@ -350,10 +348,10 @@
                 <section class="taks_dogi-suvi-main_text">
                   <div class="taks_dogi-suvi_headings">
                     <h3 class="taks_dogi-suvi_first-heading">
-                      Taksi ja Dogi Suvi. Järg raamatust "Taks ja Dogi".
+                      Taksi ja Dogi Suvi. Järg raamatule "Taks ja Dogi".
                     </h3>
                     <h3 class="taks_dogi-suvi-price">
-                      $22.95
+                      €22.95
                     </h3>
                     <h4 class="taks_dogi-suvi_author">
                       Autor: Kadri Hinrikus <br>
@@ -382,7 +380,7 @@
                   </div>
                   <div class="taks_dogi-suvi-buy_section">
                     <h4 class="taks_dogi-suvi_interst_message">
-                      Soovite Osta <br> Taks & Dogi Suvi?
+                      Soovite Osta <br> Taksi ja Dogi Suvi?
                     </h4>
                     <a href="https://www.facebook.com/profile.php?id=100000017530073"
                       class="taks_dogi-suvi_facebook_message_button" target="_blank">
@@ -408,7 +406,7 @@
               <div class="kuukass">
                 <div class="kuukass-book_section">
                   <section class="kuukass-book">
-                    <h2 class="kuukass_text">Kuukassi Koerused Kosmoses</h2>
+                    <h2 class="kuukass_text">Kuukassi koerused kosmoses</h2>
                     <img src="images/books/kuukass/kuukass.jpg" alt="" class="kuukass_image">
                     <div class="kuukass_small-pictures">
 
@@ -439,11 +437,11 @@
                   <section class="kuukass-main_text">
                     <div class="kuukass_headings">
                       <h3 class="kuukass_first-heading">
-                        Kuukassi Koerused Kosmoses.
+                        Kuukassi koerused kosmoses.
                         Lasteraamat kosmosekassist.
                       </h3>
                       <h3 class="kuukass-price">
-                        $10,00
+                        €10,00
                       </h3>
                       <h4 class="kuukass_author">
                         Autorid: Joonas Sildre & Elina Sildre
@@ -453,25 +451,20 @@
                           class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
                       </h4>
                       <h4 class="kuukass_introducing">
-                        Mis teeb selle raamatu eriliseks? Just sellele tööle Tallinna Keskraamatukogu andis
-                        lapsed
-                        kes alustas kooliteed Tallinnas 2015. aastal, nii et seda vahvat raamatut leiab paljudelt
-                        raamaturiiulitelt
-                        juures
-                        koju
+Mille poolest on see raamat eriline? Just selle teose kinkis Tallinna Keskraamatukogu 2015. aastal Tallinnas kooliteed alustanud lastele, seega võib seda vahvat raamatut leida nii mõnestki kodusest raamaturiiulist.
                       </h4>
 
                     </div>
                     <div class="kuukass-mid_text">
                       <h4 class="kuukass-mid_text_text">
-                        "Kuukassi Koerused Kosmoses" on koomiksiraamat lastele.
+                        "Kuukassi koerused kosmoses" on koomiksiraamat lastele.
                         Lugu jälgib noort poissi nimega Toomas, kes on oma esimese koolipäeba pärast närvis. Tema mured
-                        nihkuvad aga kiiresti ümber, kui vallatu kass Kuukass
+                        nihkuvad aga kiiresti ümber, kui Kuukass Kuka
                         salapäraselt
                         kaob. Peagi avastab Toomas, et Kuukass pole tavaline lemmikloom – tema seiklused juhivad neid
                         mõlemad
-                        kosmose avarustesse ja koolkonda, mille sarnast ei ole Maal. Täis huumorit,
-                        põnevus,
+                        kosmose avarustesse. Täis huumorit,
+                        põnevust,
                         ja kujutlusvõimelisi keerdkäike, see veetlev koomiks viib noored lugejad põnevasse kosmosesse
                         teekond,
                         kus kõik on võimalik ja üllatusi ootab igal sammul!
@@ -542,10 +535,10 @@
                     <section class="maailmanaba-main_text">
                       <div class="maailmanaba_headings">
                         <h3 class="maailmanaba_first-heading">
-                          Maailma naba: Lasteraamat sügavast august millel on võimed.
+                          Maailma naba: Koomiksiraamat.
                         </h3>
                         <h3 class="maailmanaba-price">
-                          $10,00
+                          €10,00
                         </h3>
                         <h4 class="maailmanaba_author">
                           Autor: Joonas Sildre
