--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -285,7 +285,7 @@
                 </div>
                 <div class="taks_dogi-buy_section">
                   <h4 class="taks_dogi_interst_message">
-                    Soovite osta <br> Taks & Dogi?
+                    Soovite osta <br> Taks ja Dogi?
                   </h4>
                   <a href="https://www.facebook.com/profile.php?id=100000017530073"
                     class="taks_dogi_facebook_message_button" target="_blank">
