--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -277,10 +277,7 @@
                 </div>
                 <div class="taks_dogi-mid_text">
                   <h4 class="taks_dogi-mid_text_text">
-                    Dogi on alles hiljuti Taksi naabrusse kolinud, kuid sellega juba paljude südamed võitnud
-                    tema lahke lugu. Husky ja Basset, Bernhardiin ja Corgi, Labrador ja Collie – kõik on võlutud
-                    Koerast. Taksile meeldib ka Dogi väga. Nii palju, et ta tahab teda ainult kutsuda
-                    jõuludeks külla, aga temaga kelgutama minnes nuusutage kevade hõngu ja kaevake lillepeenraid.
+                  Dogi on kolinud Taksi naabrusse elama alles hiljuti, kuid on juba on võitnud paljude südamed oma lahke loomuga. Haski ja Basset, Bernhardiin ja Korgi, Labrador ja Kolli - kõik on Dogist võlutud. Taksile meeldib ka Dogi hirmsasti. Koguni nii palju, et ta tahab ainult teda jõuluks külla kutsuda, vaid temaga koos kelgutamas käia, kevadelõhnu nuusutada ja lillepeenraid kaevata.
                   </h4>
                 </div>
                 <div class="taks_dogi-buy_section">
