--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -359,20 +359,20 @@
                         class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
                     </h4>
                     <h4 class="taks_dogi-suvi_introducing">
-                      Taks ja Dogi on suured sõbrad. Nende päevad on täis põnevaid jalutuskäike, paadisõite, mänge,
-                      meditatsioone ja võistluseid. Krants, Bokser, Basset, Korgi, Labrador, Hurt ja paljud teised
-                      värvikad tegelased pakuvad sõpradele seltsi.
+
+                      Kadri Hinrikus on tunnustatud eesti kirjanik, kes on tuntud oma köitvate lasteraamatute poolest.
+                      Tema eelmine
+                      teos Taks ja Dogi jälgib kahe koera Taksi ja Dogi veetlevaid seiklusi ning on
+                      köitis noori lugejaid oma võluva jutuvestmisega. Andekas illustraator Elina Sildre
+                      äratab loo oma soojade, elavate illustratsioonidega ellu.
                     </h4>
 
                   </div>
                   <div class="taks_dogi-suvi-mid_text">
                     <h4 class="taks_dogi-suvi-mid_text_text">
-                      Kadri Hinrikus on tunnustatud eesti kirjanik, kes on tuntud oma köitvate lasteraamatute poolest.
-                      Tema eelmine
-                      teos Taks ja Dogi jälgib kahe koera Taksi ja Dogi veetlevaid seiklusi ning on
-                      köitis noori lugejaid oma võluva jutuvestmisega. Andekas illustraator Elina Sildre
-                      äratab loo oma soojade, elavate illustratsioonidega ellu. Koos on Hinrikusel ja Sildrel
-                      lõi armastatud sarja, mis jääb jätkuvalt kõlama nii lastele kui ka vanematele.
+                      Taks ja Dogi on suured sõbrad. Nende päevad on täis põnevaid jalutuskäike, paadisõite, mänge,
+                      meditatsioone ja võistluseid. Krants, Bokser, Basset, Korgi, Labrador, Hurt ja paljud teised
+                      värvikad tegelased pakuvad sõpradele seltsi.
                     </h4>
                   </div>
                   <div class="taks_dogi-suvi-buy_section">
