--- a/Pood/home.html
+++ b/Pood/home.html
@@ -280,8 +280,7 @@
                   <h4 class="taks_dogi-mid_text_text">
                     Dogi has only recently moved to Taksi's neighborhood, but has already won the hearts of many with
                     his kind story. Husky and Basset, St. Bernard and Corgi, Labrador and Collie - all are charmed by
-                    the Dog. The dachshund also likes the Dog very much.
-                    Friends like it the most, but find it on the sofa and it will come, which is beautiful and good.
+                    the Dog. The dachshund also likes Dogi very much.
                   </h4>
                 </div>
                 <div class="taks_dogi-buy_section">
