--- a/Pood/home.html
+++ b/Pood/home.html
@@ -436,7 +436,7 @@
                   <section class="kuukass-main_text">
                     <div class="kuukass_headings">
                       <h3 class="kuukass_first-heading">
-                        Kuukassi Koerused Kosmoses. A children's book about a space cat.
+                        Kuukassi Koerused Kosmoses. A comic books.
                       </h3>
                       <h3 class="kuukass-price">
                         $10,00
