--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -556,7 +556,7 @@ Mille poolest on see raamat eriline? Just selle teose kinkis Tallinna Keskraamat
                           “Maailma naba” on üle pikkade aastate taas üks eestimaine lastekoomiksiraamat. See räägib
                           tüdrukust, kes üksi koju jäädes leiab koduaiast maad kaevandava teadlase. Too väidab, et just
                           seal asub maailma naba, millel on omadus kõike ja kõiki enda poole tõmmata. Nii ongi, ja läheb
-                          lahti janditamine, kuhu kaasatakse veidrad naabrid ja muud väikeasula elanikud.d.
+                          lahti janditamine, kuhu kaasatakse veidrad naabrid ja muud väikeasula elanikud.
                         </h4>
                       </div>
                       <div class="maailmanaba-buy_section">
