--- a/Pood/home.html
+++ b/Pood/home.html
@@ -107,7 +107,7 @@
             </div>
             <div class="arvopart-buy_section">
               <h4 class="arvopart_interst_message">
-                Intrested In buying <br> Between Two Sounds?
+                Interested In buying <br> Between Two Sounds?
               </h4>
               <a href="https://www.facebook.com/profile.php?id=100000017530073" class="arvopart_facebook_message_button"
                 target="_blank">
@@ -191,7 +191,7 @@
                 <h4 class="varvilinemagi-mid_text_text">
                   Joonas Sildre deals with Konrad Mägi in the network of his own internal tensions and searches, the
                   international context and the situation in Estonia in the first half of the 20th century. "I have
-                  always been interested in what is the driving force behind an artist," says Sildre. "Konrad Mägi
+                  always been Interested in what is the driving force behind an artist," says Sildre. "Konrad Mägi
                   seemed to be a model example of a complex artist's journey, even an archetype whose life map to look
                   at. However, I knew that in order to solve the mystery called Konrad Mägi, I also had to explore and
                   show light to the deeper layers of color below the surface.
@@ -199,7 +199,7 @@
               </div>
               <div class="varvilinemagi-buy_section">
                 <h4 class="varvilinemagi_interst_message">
-                  Intrested In buying <br> Värviline Mägi?
+                  Interested In buying <br> Värviline Mägi?
                 </h4>
                 <a href="https://www.facebook.com/profile.php?id=100000017530073"
                   class="varvilinemagi_facebook_message_button" target="_blank">
@@ -285,7 +285,7 @@
                 </div>
                 <div class="taks_dogi-buy_section">
                   <h4 class="taks_dogi_interst_message">
-                    Intrested In buying <br> Taks & Dogi?
+                    Interested In buying <br> Taks & Dogi?
                   </h4>
                   <a href="https://www.facebook.com/profile.php?id=100000017530073"
                     class="taks_dogi_facebook_message_button" target="_blank">
@@ -379,7 +379,7 @@
                   </div>
                   <div class="taks_dogi-suvi-buy_section">
                     <h4 class="taks_dogi-suvi_interst_message">
-                      Intrested In buying <br> Taks & Dogi Suvi?
+                      Interested In buying <br> Taks & Dogi Suvi?
                     </h4>
                     <a href="https://www.facebook.com/profile.php?id=100000017530073"
                       class="taks_dogi-suvi_facebook_message_button" target="_blank">
@@ -476,7 +476,7 @@
                     </div>
                     <div class="kuukass-buy_section">
                       <h4 class="kuukass_interst_message">
-                        Intrested In buying <br> Kuukassi Koerused Kosmoses?
+                        Interested In buying <br> Kuukassi Koerused Kosmoses?
                       </h4>
                       <a href="https://www.facebook.com/profile.php?id=100000017530073"
                         class="kuukass_facebook_message_button" target="_blank">
@@ -568,7 +568,7 @@
                       </div>
                       <div class="maailmanaba-buy_section">
                         <h4 class="maailmanaba_interst_message">
-                          Intrested In buying <br> Kuukassi Koerused Kosmoses?
+                          Interested In buying <br> Kuukassi Koerused Kosmoses?
                         </h4>
                         <a href="https://www.facebook.com/profile.php?id=100000017530073"
                           class="maailmanaba_facebook_message_button" target="_blank">
