--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -168,7 +168,7 @@
             <section class="varvilinemagi-main_text">
               <div class="varvilinemagi_headings">
                 <h3 class="varvilinemagi_first-heading">
-                  Värviline Mägi. A graphic novel about Konrad Mägi
+                  Värviline Mägi. Graafiline romaan Konrad Mägist
                 </h3>
                 <h3 class="varvilinemagi-price">
                   €45,90
