--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Tutvu meie põnevate raamatutega: Kahe heli vahel, Värviline mägi, Taks ja Dogi, Taks ja Dogi Suvi, Kuukassi Koerused Kosmoses ja Maailma naba. Iga raamat pakub unustamatuid lugemiselamusi. Astu sisse ja leia oma järgmine lemmik!">
   <link rel="icon" type="image/png" href="https://bytegrad.com/course-assets/css/2/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
