--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -73,7 +73,7 @@
           <section class="arvopart-main_text">
             <div class="arvopart_headings">
               <h3 class="arvopart_first-heading">
-                Kahe heli vahel: Arvo Pärdi teekond tema muusikakeelde.
+                Kahe heli vahel. Arvo Pärdi tee oma muusikakeeleni.
               </h3>
               <h3 class="arvopart-price">
                 €25,00
@@ -88,22 +88,20 @@
               <h4 class="arvopart_introducing">
                 "Kahe heli vahel" jälgib maailmakuulsa helilooja Arvo Pärdi elu alates tema sünnist Eestis 1935. aastal
                 kuni 1980. aastani, mil nõukogude võim sundis ta mittekonformistliku ja religioosse iseloomu tõttu
-                loobuma
-                tema muusikast.
+                emigreeruma.
               </h4>
 
             </div>
             <div class="arvopart-mid_text">
               <h4 class="arvopart-mid_text_text">
-              Aastatepikkuse uurimistöö ja tiheda koostöö põhjal Arvo Pärdiga enesega joonistab Joonas Sildre meeleoluka portree rahutust kunstnikust, kes ei pelga astuda vastu riigi kontrollile või omaenda sisemistele vastuoludele. <br> <br>
+              Aastatepikkuse uurimistöö ja tiheda koostöö põhjal Arvo Pärdiga enesega, kuvab Joonas Sildre meeleoluka portree rahutust kunstnikust, kes ei pelga astuda vastu riigi kontrollile või omaenda sisemistele vastuoludele. <br> <br>
 
-                Arvo Pärt tungis 1960. aastatel Nõukogude okupatsiooni all olevas Eestis muusikamaailma kui uljas noor
-                mees, kes nihutas avangardse modernismi piire. Seejärel jäi ta vaikima, olles kaotanud võime väljendada
-                oma tundeid talle pärandatud muusikalises keeles. Kui ta kümnendi pärast taas esile kerkis, oli ta
+                Arvo Pärt sööstis 1960. aastatel Eesti muusikamaailma kui uljas noor mees, kes nihutas avangardse modernismi piire - tehes seda keerulistes Nõukogude okupatsiooni tingimustes. 70ndatel ta vaikis, olles kaotanud võime väljendada
+                oma tundeid talle tol hetkel tuntud muusikalises keeles. Kui Pärt kümnendi pärast taas avalikkuse ette tuli, oli ta
                 leidnud helidevahelises vaikuses uue muusikalise keele, mis oli inspireeritud iidsetest vaimulikest
-                lauludest ja millest sai tema ainulaadse tintinnabuli-tehnika alus. See graafiline romaan pakub huvi
+                lauludest ja mis lähtus tema ainulaadsest tintinnabuli-tehnikast. See graafiline romaan pakub huvi
                 mitte ainult Arvo Pärdi muusika austajatele, vaid ka kõigile, kes on kogenud võitlust jääda truuks
-                iseendale, maksku, mis maksab.
+                iseendale.
               </h4>
             </div>
             <div class="arvopart-buy_section">
@@ -172,7 +170,7 @@
                   Värviline Mägi. Graafiline romaan Konrad Mägist
                 </h3>
                 <h3 class="varvilinemagi-price">
-                  €45,90
+                  €40
                 </h3>
                 <h4 class="varvilinemagi_author">
                   Autor: Joonas Sildre
@@ -190,11 +188,11 @@
               <div class="varvilinemagi-mid_text">
                 <h4 class="varvilinemagi-mid_text_text">
                   Joonas Sildre tegeleb Konrad Mäega tema enda sisemiste pingete ja otsingute võrgustikus,
-                  rahvusvaheline kontekst ja olukord Eestis 20. sajandi esimesel poolel. "Mul on
+                  rahvusvaheline kontekst ja olukord Eestis 20. sajandi esimesel poolel. "Mind on
                   alati huvitanud, mis on kunstniku edasiviiv jõud," räägib Sildre.
                   „Konrad Mägi tundus keeruka kunstnikuteekonna musternäidis, lausa
                   arhetüüp, kelle elukaart vaadata. Teadsin aga, et Konrad Mägi nimelise mõistatuse lahendamiseks pean
-                  ka uurima ja näitama valgust pealispinna all asuvatele sügavamatele värvikihtidele.“ (Joonas Sildre)
+                  ka uurima ja näitama valgust pealispinna all asuvatele sügavamatele värvikihtidele.“
                 </h4>
               </div>
               <div class="varvilinemagi-buy_section">
@@ -259,7 +257,7 @@
                     Taks ja Dogi. Lasteraamat kahest koerast.
                   </h3>
                   <h3 class="taks_dogi-price">
-                    €22.95
+                    €22
                   </h3>
                   <h4 class="taks_dogi_author">
                     Autor: Kadri Hinrikus <br>
@@ -271,7 +269,7 @@
                   </h4>
                   <h4 class="taks_dogi_introducing">
                     Taks ja Dogi on Kadri Hinrikuse südamlik lasteraamat kahest väga erinevast, kuid
-                    lahutamatud koerasõbrad. Väike tark Taks ja suur heasüdamlik Dogi jagavad toredaid seiklusi,
+                    lahutamatust koerasõbrast. Väike tark Taks ja suur heasüdamlik Dogi jagavad toredaid seiklusi,
                     tõestades, et tõeline sõprus ületab kõik erinevused.
                   </h4>
 
@@ -349,7 +347,7 @@
                       Taksi ja Dogi Suvi. Järg raamatule "Taks ja Dogi".
                     </h3>
                     <h3 class="taks_dogi-suvi-price">
-                      €22.95
+                      €22
                     </h3>
                     <h4 class="taks_dogi-suvi_author">
                       Autor: Kadri Hinrikus <br>
@@ -439,7 +437,7 @@
                         Lasteraamat kosmosekassist.
                       </h3>
                       <h3 class="kuukass-price">
-                        €10,00
+                        €15,00
                       </h3>
                       <h4 class="kuukass_author">
                         Autorid: Joonas Sildre & Elina Sildre
@@ -459,13 +457,12 @@ Mille poolest on see raamat eriline? Just selle teose kinkis Tallinna Keskraamat
                         Lugu jälgib noort poissi nimega Toomas, kes on oma esimese koolipäeba pärast närvis. Tema mured
                         nihkuvad aga kiiresti ümber, kui Kuukass Kuka
                         salapäraselt
-                        kaob. Peagi avastab Toomas, et Kuukass pole tavaline lemmikloom – tema seiklused juhivad neid
-                        mõlemad
+                        kaob. Peagi avastab Toomas, et Kuukass pole tavaline lemmikloom – tema seiklused viivad neid
+                        mõlemaid
                         kosmose avarustesse. Täis huumorit,
                         põnevust,
-                        ja kujutlusvõimelisi keerdkäike, see veetlev koomiks viib noored lugejad põnevasse kosmosesse
-                        teekond,
-                        kus kõik on võimalik ja üllatusi ootab igal sammul!
+                        ja kujutlusvõimelisi keerdkäike, viib see veetlev koomiks noored lugejad põnevale teekonnale kosmosesse,                        ,
+                        kus kõik on võimalik ja üllatusi leidub igal sammul!
                       </h4>
                     </div>
                     <div class="kuukass-buy_section">
@@ -547,14 +544,14 @@ Mille poolest on see raamat eriline? Just selle teose kinkis Tallinna Keskraamat
                         </h4>
                         <h4 class="maailmanaba_introducing">
                           Koomiksi autor on Joonas Sildre, kelle koomiksid on ilmunud nii eesti keeles
-                          ajakirjanduses ja välismaistes koomiksikogudes. Ta on üks tuntumaid eestlasi
-                          karikaturistid välismaal. "Maailma naba" on tema esimene autoriraamat.
+                          ajakirjanduses ja välismaistes koomiksikogudes. Ta on üks tuntumaid eestlasest
+                          koomiksiautoreid välismaal. "Maailma naba" on tema esimene autoriraamat.
                         </h4>
 
                       </div>
                       <div class="maailmanaba-mid_text">
                         <h4 class="maailmanaba-mid_text_text">
-                          “Maailma naba” on üle pikkade aastate taas üks eestimaine lastekoomiksiraamat. See räägib
+                          “Maailma naba” on pärast pikka pausi pärast 90ndaid esimene eestimaine lastekoomiksiraamat. See räägib
                           tüdrukust, kes üksi koju jäädes leiab koduaiast maad kaevandava teadlase. Too väidab, et just
                           seal asub maailma naba, millel on omadus kõike ja kõiki enda poole tõmmata. Nii ongi, ja läheb
                           lahti janditamine, kuhu kaasatakse veidrad naabrid ja muud väikeasula elanikud.
