--- a/Pood/esthome.html
+++ b/Pood/esthome.html
@@ -22,7 +22,7 @@
     <section class="top-bar">
       <div class="top-bar_headings">
         <h1 class="first-heading">SildrePood</h1>
-        <h2 class="second-heading">Ostke Sildrete raamatuid! </h2>
+        <h2 class="second-heading">Ostke Sildrete signeeritud raamatuid otse autoritelt! </h2>
       </div>
       <div class="top-bar_buttons">
         <div class="switch">
