--- a/Pood/home.html
+++ b/Pood/home.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous" />
   <link rel="stylesheet" href="home.css">
   <script src="home.js"></script>
+  <meta name="google-site-verification" content="GyNdpHxhP_pqxD8S1aQXBpl4rK4r9xksSXOa055Xm7s" />
   <title>Sildre Pood -- Find any Sildre's books</title>
 </head>
 
