--- a/Pood/home.html
+++ b/Pood/home.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="home.css">
   <script src="home.js"></script>
   <title>Sildre Pood -- Find any Sildre's books</title>
+  <meta name="google-site-verification" content="GyNdpHxhP_pqxD8S1aQXBpl4rK4r9xksSXOa055Xm7s" />
 </head>
 
 <body class="page">
@@ -596,3 +597,4 @@
   </section>
   </div>
 </body>
+
